# GVE

./: .gitignore  build-wasm.bat  build-wasm.ps1
backend/architect/: README.md  pyproject.toml  verification_result.txt
backend/architect/scripts/: force_compile.py  setup_vector_index.py  test_generate.ps1  vector_index_definition.json  verify_colors.py  view_asset.ps1
backend/architect/src/: torch_preloader.py
backend/architect/src/ai_pipeline/: __init__.py  agents.py  concept_artist.py  orchestrator.py  rag.py  track_matter.py  track_matter_agents.py  track_matter_pipeline.py  track_matter_schemas.py
backend/architect/src/api/: __init__.py  assets.py  compile.py  generate.py  generate_schemas.py  generate_tasks.py  library.py  templates.py  websocket.py  world.py
backend/architect/src/compiler/: __init__.py  binary_writer.py  math_jit.py  math_jit_builder.py  math_jit_modifiers.py  math_jit_nodes.py  math_jit_noise.py  mesh_repair.py  oklab.py  pipeline.py  queue.py  shell_gen.py  splat_trainer.py  vdb_converter.py  volume_bake.py
backend/architect/src/librarian/: __init__.py  assets.py  cache.py  materials.py
backend/architect/tests/: test_gpu_splat.py  test_vdb_math.py  test_vector_search.py  verify_api.py  verify_card_chain.py  verify_compiler.py  verify_compiler_vdb.py  verify_forge_ui.py  verify_librarian.py  verify_property_editor.py
docs/: README.md
docs/architecture/: README.md  codebase-structure.md  engine-api.md  overview.md
docs/architecture/codebase-structure/: README.md  ai-context-guide.md  module-breakdowns.md  overview.md
docs/core-systems/: README.md  audio-system.md  destruction-system.md  math-library.md  physics-system.md  rendering-pipeline.md
docs/data/: README.md  data-specifications.md  database-architecture.md  material-database.md  world-and-chunks.md
docs/guides/: README.md
docs/improvements/: README.md  splat-strategy.md
docs/tools/: README.md  forge-card-chain.md  forge-editor.md  forge-libraries.md  forge-modifiers.md  forge-property-editor.md  forge-viewport.md  forge-world-editor.md  texture-library-implementation.md
docs/whitepaper/: 01-architecture.md  02-rendering-and-geometry.md  03-compiler-and-data.md  04-ai-and-workflows.md  05-audio-and-physics.md  06-runtime-and-tooling.md  07-references.md  README.md
docs/workflows/: ai-pipeline.md  compiler-pipeline.md  lidar-pipeline.md  schema-sync.md
engine/runtime/: Cargo.toml  build_error.txt
engine/runtime/src/: lib.rs
engine/runtime/src/renderer/: gizmos.rs  loaders.rs  lod.rs  math.rs  mod.rs  pipeline.rs  shaders.rs  shaders_extra.rs  test_geometry.rs  types.rs  view_cube.rs  view_cube.wgsl
engine/shared/: Cargo.toml
engine/shared/src/: binary_format.rs  lib.rs
engine/shared/src/types/: asset.rs  material.rs  message.rs  mod.rs
engine/wasm/: Cargo.toml
engine/wasm/src/: lib.rs  message_handler.rs  wasm_engine.rs
schemas/: schema.json
tests/: test_compiler_internals.py
tools/: generate_schemas.ps1
tools/forge-ui/: README.md  serve.py
tools/forge-ui/static/: index.html  viewport.html
tools/forge-ui/static/assets/: test_sphere.gve_bin
tools/forge-ui/static/assets/primitives/: box.gve_bin  capsule.gve_bin  cone.gve_bin  cylinder.gve_bin  plane.gve_bin  sphere.gve_bin  torus.gve_bin
tools/forge-ui/static/css/: base.css  forms.css  library.css  studio-components.css  studio-layout.css  studio-tree.css  studio-world.css
tools/forge-ui/static/js/: events.js  studio-chain.js  studio-genai-ui.js  studio-genai.js  studio-navigation.js  studio-world.js  viewport-camera.js  viewport.js
tools/forge-ui/templates/: asset_browser.html  asset_card.html  card_chain.html  library_card.html  library_grid.html  progress_bar.html  property_editor.html  tree_viewer.html  world_chunks_partial.html
