[project]
name = "architect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "google-genai>=1.60.0",
    "meshlib>=3.1.0.75",
    "motor[srv]>=3.7.1",
    "numpy>=2.4.1",
    "pydantic>=2.12.5",
    "pyopenvdb",
    "python-multipart>=0.0.22",
    "sentence-transformers>=3.0.0",
    "torch>=2.10.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "datamodel-code-generator[ruff]>=0.53.0",
    "httpx>=0.28.1",
    "pyyaml>=6.0.3",
]
