[project]
name = "architect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "cachetools>=5.3.0",
    "fastapi>=0.128.0",
    "google-genai>=1.60.0",
    "lz4>=4.3.0",
    "meshlib>=3.1.0.75",
    "motor[srv]>=3.7.1",
    "numpy>=2.4.1",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.22",
    "rocm",
    "rocm-sdk-core",
    "rocm-sdk-devel",
    "rocm-sdk-libraries-custom",
    "sentence-transformers>=3.0.0",
    "torch>=2.10.0",
    "torchaudio",
    "torchvision",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "datamodel-code-generator[ruff]>=0.53.0",
    "httpx>=0.28.1",
    "pyyaml>=6.0.3",
]

[tool.uv.sources]
rocm-sdk-core = { url = "https://repo.radeon.com/rocm/windows/rocm-rel-7.2/rocm_sdk_core-7.2.0.dev0-py3-none-win_amd64.whl" }
rocm-sdk-devel = { url = "https://repo.radeon.com/rocm/windows/rocm-rel-7.2/rocm_sdk_devel-7.2.0.dev0-py3-none-win_amd64.whl" }
rocm-sdk-libraries-custom = { url = "https://repo.radeon.com/rocm/windows/rocm-rel-7.2/rocm_sdk_libraries_custom-7.2.0.dev0-py3-none-win_amd64.whl" }
rocm = { url = "https://repo.radeon.com/rocm/windows/rocm-rel-7.2/rocm-7.2.0.dev0.tar.gz" }
torch = { url = "https://repo.radeon.com/rocm/windows/rocm-rel-7.2/torch-2.9.1%2Brocmsdk20260116-cp312-cp312-win_amd64.whl" }
torchaudio = { url = "https://repo.radeon.com/rocm/windows/rocm-rel-7.2/torchaudio-2.9.1%2Brocmsdk20260116-cp312-cp312-win_amd64.whl" }
torchvision = { url = "https://repo.radeon.com/rocm/windows/rocm-rel-7.2/torchvision-0.24.1%2Brocmsdk20260116-cp312-cp312-win_amd64.whl" }
