[package]
name = "gve_runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = { version = "22", features = ["webgpu", "webgl"] }
glam = "0.29"
bytemuck = { version = "1.14", features = ["derive"] }
shared = { path = "../shared" }
log = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlCanvasElement"] }
