[package]
name = "gve_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console", "Window", "Document", "Element", "HtmlCanvasElement", "WebGl2RenderingContext"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
wgpu = { version = "22", features = ["webgpu", "webgl"] }
shared = { path = "../shared" }
gve_runtime = { path = "../runtime" }
once_cell = "1.18"
wasm-bindgen-futures = "0.4"
bytemuck = { version = "1.14", features = ["derive"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
